Changed 404.html file, deleted .htaccess file

--- a/my-app1/404.html
+++ b/my-app1/404.html
@@ -1,4 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Page Not Found</title>
+  </head>
+  <body>
+    <script>
+      const url = window.location.href.replace(/\/404\.html$/,'/')
+      window.location.replace(url)
+    </script>
+  </body>
+</html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -10,4 +23,4 @@
       window.location.replace(redirectUrl);
     </script>
   </body>
-</html>
+</html> -->
